Title size & translation

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	<body>
 		<div class="ink-grid">
 			<div class="column-group half-gutters">
-				<div class="all-50 btn align-left">
+				<div class="all-70 btn align-left">
 					<h1>Phasmophobia</h1>
 				</div>
-				<div class="all-50 btn">
+				<div class="all-30 btn">
 					<div class="button-group push-right">
 			  			<button class="ink-button lang" id="fr_FR"><img src="flags/France.png"/></button>
 			  			<button class="ink-button lang" id="en_GB"><img src="flags/United-Kindom.png"/></button>
@@ -64,7 +64,7 @@
 			<div class="column-group" id="spiritList">
 				
 				<div class="all-20 small-50 tiny-100" id="BAN" class="BAN">
-					Banshee<br />
+					<span class="BAN">Banshee</span><br />
 					<ul class="sclues">
 						<li class="EPR"></li>
 						<li class="TMP"></li>
@@ -72,7 +72,7 @@
 					</ul>
 				</div>
 				<div class="all-20 small-50 tiny-100" id="CAU" class="CAU">
-					Cauchemar<br />
+					<span class="CAU">Cauchemar</span><br />
 					<ul class="sclues">
 						<li class="SPB"></li>
 						<li class="TMP"></li>
@@ -80,7 +80,7 @@
 					</ul>
 				</div>
 				<div class="all-20 small-50 tiny-100" id="DEM" class="DEM">
-					Démon<br />
+					<span class="DEM">Démon</span><br />
 					<ul class="sclues">
 						<li class="SPB"></li>
 						<li class="ECR"></li>
@@ -88,7 +88,7 @@
 					</ul>
 				</div>
 				<div class="all-20 small-50 tiny-100" id="ESP" class="ESP">
-					Esprit<br />
+					<span class="ESP">Esprit</span><br />
 					<ul class="sclues">
 						<li class="SPB"></li>
 						<li class="EPR"></li>
@@ -96,7 +96,7 @@
 					</ul>
 				</div>
 				<div class="all-20 small-50 tiny-100" id="FAN" class="FAN">
-					Fantôme<br />
+					<span class="FAN">Fantôme</span><br />
 					<ul class="sclues">
 						<li class="TMP"></li>
 						<li class="EMF"></li>
@@ -104,7 +104,7 @@
 					</ul>
 				</div>
 				<div class="all-20 small-50 tiny-100" id="JIN" class="JIN">
-					Jinn<br />
+					<span class="JIN">Jinn</span><br />
 					<ul class="sclues">
 						<li class="SPB"></li>
 						<li class="EMF"></li>
@@ -112,7 +112,7 @@
 					</ul>
 				</div>
 				<div class="all-20 small-50 tiny-100" id="OMB" class="OMB">
-					Ombre<br />
+					<span class="OMB">Ombre</span><br />
 					<ul class="sclues">
 						<li class="ECR"></li>
 						<li class="EMF"></li>
@@ -120,7 +120,7 @@
 					</ul>
 				</div>
 				<div class="all-20 small-50 tiny-100" id="ONI" class="ONI">
-					Oni<br />
+					<span class="ONI">Oni</span><br />
 					<ul class="sclues">
 						<li class="SPB"></li>
 						<li class="ECR"></li>
@@ -128,7 +128,7 @@
 					</ul>
 				</div>
 				<div class="all-20 small-50 tiny-100" id="PLT" class="PLT">
-					Poltergeist<br />
+					<span class="PLT">Poltergeist</span><br />
 					<ul class="sclues">
 						<li class="SPB"></li>
 						<li class="EPR"></li>
@@ -136,7 +136,7 @@
 					</ul>
 				</div>
 				<div class="all-20 small-50 tiny-100" id="REV" class="REV">
-					Revenant<br />
+					<span class="REV">Revenant</span><br />
 					<ul class="sclues">
 						<li class="EPR"></li>
 						<li class="ECR"></li>
@@ -144,7 +144,7 @@
 					</ul>
 				</div>
 				<div class="all-20 small-50 tiny-100" id="SPE" class="SPE">
-					Spectre<br />
+					<span class="SPE">Spectre</span><br />
 					<ul class="sclues">
 						<li class="SPB"></li>
 						<li class="EPR"></li>
@@ -152,7 +152,7 @@
 					</ul>
 				</div>
 				<div class="all-20 small-50 tiny-100" id="YUR" class="YUR">
-					Yurei<br />
+					<span class="YUR">Yurei</span><br />
 					<ul class="sclues">
 						<li class="ECR"></li>
 						<li class="TMP"></li>
