--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<div class="button-group push-right">
 			  			<button class="ink-button lang" id="fr_FR"><img src="flags/France.png"/></button>
 			  			<button class="ink-button lang" id="en_GB"><img src="flags/United-Kindom.png"/></button>
+			  			<button class="ink-button lang" id="ja_JP"><img src="flags/Japan.png"/></button>
 			  		</div>
 				</div>
 			  	<div class="all-100 align-center">
