Move descriptions to lang files

--- a/index.html
+++ b/index.html
@@ -66,67 +66,11 @@
 			</div>
 			<div class="column-group gutters">
 				<div class="all-100">
-					<div id="INFBAN" class="ink-alert block info" role="alert">
-					    <h4 class="BAN">Banshee</h4>
-					    <p><b>Force :</b> Cible qu'une personne à la fois</p>
-					    <p><b>Faiblesse :</b> Craignent les crucifix et sont moins agressif à leurs portées</p>
+					<div id="info" class="ink-alert block info" role="alert">
+					    <h4 class="title"></h4>
+					    <p><b><span id="stre"></span> :</b> <span id="streDesc"></span></p>
+					    <p><b><span id="weak"></span> :</b> <span id="weakDesc"></span></p>
 					</div>
-					<div id="INFCAU" class="ink-alert block info" role="alert">
-					    <h4 class="CAU">Cauchemar</h4>
-					    <p><b>Force :</b> Chance d'attaquer dans l'obscurité</p>
-					    <p><b>Faiblesse :</b> Allumer les lumières réduit les chances d'attaque</p>
-					</div>
-					<div id="INFDEM" class="ink-alert block info" role="alert">
-					    <h4 class="DEM">Démon</h4>
-					    <p><b>Force :</b> Attaque plus souvent</p>
-					    <p><b>Faiblesse :</b> Poser correctement une question sur une planche Ouija ne réduira pas la santé mentale</p>
-					</div>
-					<div id="INFESP" class="ink-alert block info" role="alert">
-					    <h4 class="ESP">Esprit</h4>
-					    <p><b>Force :</b> Rien</p>
-					    <p><b>Faiblesse :</b> Bâton d'encens l'empêchera d'attaquer pendant une longue période</p>
-					</div>
-					<div id="INFFAN" class="ink-alert block info" role="alert">
-					    <h4 class="FAN">Fantôme</h4>
-					    <p><b>Force :</b> Le regarder diminue considérablement la santé mentale</p>
-					    <p><b>Faiblesse :</b> Prendre une photo le fait temporairement disparaitre</p>
-					</div>
-					<div id="INFJIN" class="ink-alert block info" role="alert">
-					    <h4 class="JIN">Jinn</h4>
-					    <p><b>Force :</b> Voyage à une vitesse plus rapide si la victime est éloignée</p>
-					    <p><b>Faiblesse :</b> Couper le courant l'empêche d'utiliser sa capacité</p>
-					</div>
-					<div id="INFOMB" class="ink-alert block info" role="alert">
-					    <h4 class="OMB">Ombre</h4>
-					    <p><b>Force :</b> Etre timide signifie que le fantôme sera plus difficile à trouver</p>
-					    <p><b>Faiblesse :</b> N'entre pas en chasse si plusieurs personnes à proximité</p>
-					</div>
-					<div id="INFONI" class="ink-alert block info" role="alert">
-					    <h4 class="ONI">Oni</h4>
-					    <p><b>Force :</b> Plus actifs lorsque des personnes sont à proximité et ont vu des objets en mouvement à grande vitesse</p>
-					    <p><b>Faiblesse :</b> Être plus actif le rendra plus facile à trouver et identifier</p>
-					</div>
-					<div id="INFPLT" class="ink-alert block info" role="alert">
-					    <h4 class="PLT">Poltergeist</h4>
-					    <p><b>Force :</b> Peut lancer d'énormes quantités d'objets à la fois</p>
-					    <p><b>Faiblesse :</b> Inefficace dans une pièce vide</p>
-					</div>
-					<div id="INFREV" class="ink-alert block info" role="alert">
-					    <h4 class="REV">Revenant</h4>
-					    <p><b>Force :</b> Voyage à une vitesse plus rapide s'il chasse</p>
-					    <p><b>Faiblesse :</b> Se cacher le fera bouger lentement</p>
-					</div>
-					<div id="INFSPE" class="ink-alert block info" role="alert">
-					    <h4 class="SPE">Spectre</h4>
-					    <p><b>Force :</b> Ne touche presque jamais le sol (pas d'empreintes)</p>
-					    <p><b>Faiblesse :</b> Réaction toxique au sel</p>
-					</div>
-					<div id="INFYUR" class="ink-alert block info" role="alert">
-					    <h4 class="YUR">Yurei</h4>
-					    <p><b>Force :</b> Effet pluys fort sur la santé mentale</p>
-					    <p><b>Faiblesse :</b> Le fait d'utiliser un bâton d'encens dans la salle du Yurei l'empêchera de se promener longtemps dans les lieux</p>
-					</div>
-
 				</div>
 			</div>
 
