--- a/index.html
+++ b/index.html
@@ -5,25 +5,32 @@
 		<title>Phasmophobia</title>
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<script src="jquery-2.0.3.min.js"></script>
-		<script src="script.js?t=1"></script>
+		<script src="script.js?t=2"></script>
 		<script src="fontawesome/js/all.min.js"></script>
 		<link rel="stylesheet" href="knacss.css">
 		<!--<link rel="stylesheet" type="text/css" href="ink/css/ink.min.css">-->
 		<link rel="stylesheet" type="text/css" href="ink/css/ink-flex.min.css">
-		<link rel="stylesheet" href="style.css?t=1">
-	</head>
+		<link rel="stylesheet" href="style.css?t=2">
+	</head>22
 	<body>
 		<div class="ink-grid">
 			<div class="column-group half-gutters">
-				<div class="all-70 btn align-left">
+				<div class="all-65 btn align-left">
 					<h1>Phasmophobia</h1>
 				</div>
-				<div class="all-30 btn">
-					<div class="button-group push-right">
-			  			<button class="ink-button lang" id="fr_FR"><img src="flags/France.png"/></button>
-			  			<button class="ink-button lang" id="en_GB"><img src="flags/United-Kindom.png"/></button>
-			  			<button class="ink-button lang" id="ja_JP"><img src="flags/Japan.png"/></button>
-			  		</div>
+				<div class="all-35 btn">
+			  		<nav class="ink-navigation all-100">
+					    <ul class="menu horizontal black">
+					        <li class="all-100">
+					            <a  class="heading active" href="#"><img src="flags/France.png"/> Français</a>
+					            <ul class="submenu">
+					                <li><a href="#" class="lang" id="fr_FR"><img src="flags/France.png"/> Français</a></li>
+					                <li><a href="#" class="lang" id="en_GB"><img src="flags/United-Kindom.png"/> English</a></li>
+					                <li><a href="#" class="lang" id="ja_JP"><img src="flags/Japan.png"/> 日本語</a></li>
+					            </ul>
+					        </li>
+					    </ul>
+					</nav>
 				</div>
 			  	<div class="all-100 align-center">
 			  		<div class="button-group">
