--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!--<link rel="stylesheet" type="text/css" href="ink/css/ink.min.css">-->
 		<link rel="stylesheet" type="text/css" href="ink/css/ink-flex.min.css">
 		<link rel="stylesheet" href="style.css?t=2">
-	</head>22
+	</head>
 	<body>
 		<div class="ink-grid">
 			<div class="column-group half-gutters">
