--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 					        <li class="all-100">
 					            <a  class="heading active" href="#"><img src="flags/France.png"/> Français</a>
 					            <ul class="submenu">
-					                <li><a href="#" class="lang" id="fr_FR"><img src="flags/France.png"/> Français</a></li>
 					                <li><a href="#" class="lang" id="en_GB"><img src="flags/United-Kindom.png"/> English</a></li>
+					                <li><a href="#" class="lang" id="fr_FR"><img src="flags/France.png"/> Français</a></li>
+					                <li><a href="#" class="lang" id="de_DE"><img src="flags/Germany.png"/> Deutsche</a></li>
 					                <li><a href="#" class="lang" id="ja_JP"><img src="flags/Japan.png"/> 日本語</a></li>
 					            </ul>
 					        </li>
