New game version
Update regarding last game version (New DOTS and new spirits)

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 			    <div class="xlarge-15 large-20 medium-33 small-50 tiny-100 align-center">
 					<button id="OFA" class="ink-button grey clue"><i class="fas fa-ghost"></i><br /><span class="OFA">Orbe fantômatique</span><br /><span class="yn">&nbsp;</span></button>
 			    </div>
+			    <div class="xlarge-15 large-20 medium-33 small-50 tiny-100 align-center">
+					<button id="DOT" class="ink-button grey clue"><i class="fas fa-barcode"></i><br /><span class="DOT">Projecteur D.O.T.S.</span><br /><span class="yn">&nbsp;</span></button>
+			    </div>
 			</div>
 
 			<div class="column-group gutters">
